swagger implementation , api testing and ec2 db